--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site/SEO settings
-email: 
+email: zhuqianze@pku.edu.cn
 permalink: /:year/:month/:day/:title/
 google_analytics: 
 
-title: Trophy
+title: Qian-Ze Zhu
 description: 
 url: ""
 baseurl: ""
