--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ permalink: /:year/:month/:day/:title/
 google_analytics: 
 
 title: Qian-Ze Zhu
-description: 
-url: ""
+description: Physics & Art & Love
+url: "https://rosellaalucard.github.io/"
 baseurl: ""
 twitter_username: 
 default_img: 
