--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ google_analytics:
 title: Qian-Ze Zhu
 description: Physics & Art & Love
 url: "https://rosellaalucard.github.io/"
-baseurl: ""
+baseurl: "/blog"
 twitter_username: 
 default_img: 
 
