--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ google_analytics:
 
 title: Qian-Ze Zhu
 description: Physics & Art & Love
-url: "https://rosellaalucard.github.io/"
-baseurl: "blog"
+url: ""
+baseurl: ""
 twitter_username: 
 default_img: 
 
