--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink: /:year/:month/:day/:title/
 google_analytics: 
 
 title: Qian-Ze Zhu
-description: Physics & Art & Love
+description:
 url: ""
 baseurl: ""
 twitter_username: 
