--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ google_analytics:
 
 title: Qian-Ze Zhu
 description:
-url: ""
+url: "https://rosellaalucard.github.io/"
 baseurl: ""
 twitter_username: 
 default_img: 
