--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink: /:year/:month/:day/:title/
 google_analytics: 
 
 title: Qian-Ze Zhu
-description:
+description: A second-year undergraduate in Department of Physics, Peking University, China.
 url: "https://rosellaalucard.github.io/"
 baseurl: ""
 twitter_username: 
