--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ twitter_username:
 default_img: 
 
 # Profile settings
-name: 
-profile_img: 
+name: Qian-Ze Zhu
+profile_img: https://res.cloudinary.com/rosellaalucard/image/upload/v1562178799/avatar_u6jrpf.jpg
 profile: 
 social:
   github: 
