--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ default_img:
 # Profile settings
 name: Qian-Ze Zhu
 profile_img: https://res.cloudinary.com/rosellaalucard/image/upload/v1562178799/avatar_u6jrpf.jpg
-profile: 
+profile: A second-year undergraduate in Department of Physics, Peking University, China. Love all kinds of beautiful things.
 social:
-  github: 
+  github: RosellaAlucard
 
 # Build settings
 markdown: kramdown
