--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,20 @@ email: zhuqianze@pku.edu.cn
 permalink: /:year/:month/:day/:title/
 google_analytics: 
 
-title: Qian-Ze Zhu
+header-img: https://res.cloudinary.com/rosellaalucard/image/upload/v1565285286/R0002286_ihewgv.jpg
+
+title: Qian-Ze Zhu's Blog
+SEOtitle: Qian-Ze Zhu | Blog
 description: A second-year undergraduate in Department of Physics, Peking University, China.
 url: "https://rosellaalucard.github.io/"
 baseurl: ""
 twitter_username: 
 default_img: 
+
+# SIdebar settings
+sidebar: true
+sidebar-about-desciption: "Hakuna Matata"
+sidebar-avatar: https://res.cloudinary.com/rosellaalucard/image/upload/v1562178799/avatar_u6jrpf.jpg
 
 # Profile settings
 name: Qian-Ze Zhu
@@ -49,3 +57,7 @@ post_asset_folder: true
 # Comments
 comment:
         disqus: https://rosellaalucard.github.io/
+
+# Featured Tags
+featured-tags: true
+featured-condition-size: 1
