--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ google_analytics:
 
 header-img: https://res.cloudinary.com/rosellaalucard/image/upload/v1565285286/R0002286_ihewgv.jpg
 
-title: Qian-Ze Zhu's Blog
+title: Qian-Ze Zhu
 SEOtitle: Qian-Ze Zhu | Blog
 description: A second-year undergraduate in Department of Physics, Peking University, China.
 url: "https://rosellaalucard.github.io/"
